# OxyOS

./: .gitignore  AGENTS.md  README.md  build.sh  docs.config.json
.github/workflows/: build-iso.yml  deploy-demo.yml
apps/terminal/: package.json  pnpm-lock.yaml  vite.config.ts
apps/terminal/src/: App.tsx  PaneContainer.tsx  SplitDivider.tsx  TabBar.tsx  TerminalView.tsx  index.css  store.ts
apps/terminal/src-tauri/: Cargo.toml  tauri.conf.json
apps/terminal/src-tauri/src/: lib.rs  main.rs  pty.rs
config/: binary  build  chroot  common  oxyos.conf
config/archives/: oxyos.key.binary  oxyos.list.binary  oxyos.list.chroot
config/bootloaders/grub-pc/: grub.cfg
config/bootloaders/isolinux/: menu.cfg
config/bootloaders/pxelinux/: menu.cfg
config/hooks/live/: 0800-oxyos-branding.hook.chroot  0840-build-shell.hook.chroot  0845-oxterm-default.hook.chroot  0850-lxdm-config.hook.chroot  0855-disable-live-config-lxdm.hook.chroot  0860-grub-init-tune.hook.chroot  0900-tap-to-click.hook.chroot  0905-arm64-kernel.hook.chroot  0906-arm64-sp11-dtb.hook.chroot  0910-arm64-snapdragon.hook.chroot  0920-arm64-dtb.hook.binary
config/package-lists/: arm64-firmware.list.chroot  live.list.chroot
config/preseed/: preseed.cfg.chroot
docs/: SURFACE_LAPTOP_7_RELEASE_CHECKLIST.md  customizing.mdx  index.mdx  iso-build.mdx  shell-architecture.mdx
shell/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vite.web.config.ts  web.html
shell/src/: App.tsx  WebApp.tsx  index.css  main.tsx  tauri.d.ts  web.tsx
shell/src-tauri/: Cargo.toml  tauri.conf.json
(+77 files in other folders)
