[package]
name = "oxy-terminal"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "oxy_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
portable-pty = "0.8"
